# UltimateTicTacToeServer

./: .gitignore  README.md  UltimateTicTacToeServer.cabal  accountdb  stack.yaml
app/: Main.hs
src/: Game.hs  Lib.hs  Server.hs  Types.hs
src/Account/: Account.hs  Types.hs
src/Game/: Game.hs  Types.hs
test/: Spec.hs
www/: index.html  main.js
