name:                UltimateTicTacToeServer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/UltimateTicTacToeServer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server,
                       Lib,
                       Game.Types,
                       Game.Game
  build-depends:       base >= 4.7 && < 5,
                       servant == 0.4.4.*,
                       matrix == 0.3.4.*,
                       aeson == 0.8.*,
                       vector == 0.10.*,
                       hashmap == 1.3.*,
                       stm == 2.4.*,
                       transformers == 0.4.*,
                       servant-server == 0.4.4.*,
                       persistent == 2.2.*,
                       persistent-sqlite == 2.2.*,
                       persistent-template == 2.1.*,
                       wai == 3.0.3.*,
                       warp == 3.1.*,
                       servant-jquery == 0.4.4.*,
                       either == 4.4.*,
                       servant-docs==0.4.4.*
  default-language:    Haskell2010
  other-modules:       Account.Account
                     , Account.Types

executable UltimateTicTacToeServer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , UltimateTicTacToeServer
  default-language:    Haskell2010

test-suite UltimateTicTacToeServer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , UltimateTicTacToeServer
                     , matrix == 0.3.4.*
                     , vector == 0.10.*
                     , hspec == 2.1.*
                     , either == 4.4.*
                     , servant-server == 0.4.4.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/UltimateTicTacToeServer
